everything/gitops/platform/hive/capability/services/scheduler/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hive-capability-scheduler
  namespace: hive
spec:
  podSelector:
    matchLabels:
      app: hive-capability-scheduler
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hive-hub
      ports:
        - port: 8000
          protocol: TCP
